# gz_sensors_ouster

./: .clang-format  .dockerignore  .editorconfig  .gitignore  AUDIT.md  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Doxyfile  LICENSE  README.md  package.xml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yaml
config/: plugin_example.sdf
config/metadata/: os0_128_rev7.json  os0_128_rev7_legacy.json  os1_128_rev7.json  os1_128_rev7_legacy.json  os1_64_rev7.json  os1_64_rev7_legacy.json  os2_128_rev7.json  os2_128_rev7_legacy.json  osdome_128_rev7.json  osdome_128_rev7_legacy.json
cuda/: CMakeLists.txt  backend.hpp  backend_cpu.cpp  backend_stubs.cpp  imu_noise.cpp  imu_noise.hpp  panel_layout.cpp  panel_layout.hpp  ray_processor_cpu_impl.cpp  ray_processor_cpu_impl.hpp  ray_processor_cuda.cu  ray_processor_cuda.cuh  ray_processor_dispatch.cpp  ray_processor_fallback.cpp  ray_processor_hip.cpp  ray_processor_math.hpp  ray_processor_sycl.cpp  raycast_math.hpp  raycast_scene.cpp  raycast_scene.hpp
docker/: entrypoint.sh  smoke_check.py
docs/: MODEL_REFERENCES.md  SYSTEMS_REFERENCES.md
examples/config/: ouster_bridge.yaml
examples/launch/: depthcam_derisk.launch.py  ouster_standalone.launch.py  sensor_stack.launch.py  turtlebot3_ouster.launch.py
examples/rviz/: ouster.rviz  sensor_stack.rviz
examples/urdf/: ouster_macro.xacro  ouster_standalone.urdf.xacro  sensor_stack.urdf.xacro  turtlebot3_ouster.urdf.xacro
examples/worlds/: depthcam_derisk.sdf  ouster_demo.sdf  turtlebot3_ouster_headless.sdf
include/gz_gpu_ouster_lidar/: cuda_ray_processor.hpp  gz_gpu_ouster_lidar_system.hpp  ray_processor.hpp
src/: frame_exchange.hpp  gz_gpu_ouster_lidar_system.cpp  lidar_common.hpp  ouster_metadata.cpp  ouster_metadata.hpp  packet_encoder.cpp  packet_encoder.hpp  panel_rig.cpp  panel_rig.hpp  raycast_mirror.cpp  raycast_mirror.hpp  ros_interface.cpp  ros_interface.hpp
test/: panel_test_utils.hpp  test_dispatch.cpp  test_frame_exchange.cpp  test_imu_noise.cpp  test_lifecycle.cpp  test_metadata_parsing.cpp  test_noise_model.cpp  test_parameter_validation.cpp  test_raycast.cpp  test_resample.cpp
